--- a/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
+++ b/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
@@ -46,8 +46,18 @@
            Product Backlog
           </a>
       </li>
-      {% endif %}
 
+      <li class="nav-item">
+        <a class="nav-link collapsed text-truncate" href="#submenu1" data-toggle="collapse" data-target="#submenu1"><i class="fa fa-table"></i> <span class="d-none d-sm-inline">Reportes</span></a>
+        <div class="collapse" id="submenu1" aria-expanded="false">
+            <ul class="flex-column pl-2 nav">
+                <li class="nav-item"><a class="nav-link py-0" href="#"><span>Burdon Chart</span></a></li>
+                <li class="nav-item"><a class="nav-link py-0" href="#"><span>Velocity Chart</span></a></li>
+            </ul>
+        </div>
+    </li>
+      {% endif %}
+<!-- 
           <li class="nav-item">
                     <a class="nav-link collapsed text-truncate" href="#submenu1" data-toggle="collapse" data-target="#submenu1"><i class="fa fa-table"></i> <span class="d-none d-sm-inline">Reports</span></a>
                     <div class="collapse" id="submenu1" aria-expanded="false">
@@ -78,18 +88,9 @@
                             </li>
                         </ul>
                     </div>
-                </li>
+                </li> -->
           
 
-
-          {% if 'verProyecto' in segment %}
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="material-icons">border_color</i>
-              <p>Gestion del proyecto</p>
-            </a>
-          </li>
-          {% endif %}
 
 
       {% if userSession.df_rol.id == 1 %}
