--- a/sistema_metodos_agiles/webApp/templates/home/usuarios.html
+++ b/sistema_metodos_agiles/webApp/templates/home/usuarios.html
@@ -16,7 +16,7 @@
       </div>
       <div class="card-body">
         <div class="table-responsive">
-          <table class="table">
+          <table id="table" class="display" style="width:100%">
             <thead class=" text-primary">
               <th>
                 ID
