--- a/sistema_metodos_agiles/webApp/templates/home/rolesProyecto.html
+++ b/sistema_metodos_agiles/webApp/templates/home/rolesProyecto.html
@@ -7,46 +7,9 @@
 
 {% block content %}
 {% include 'includes/options.html' %}
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Nuevo Rol</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            <form method="post" action="{% url 'webApp:crearRolProyecto' proyecto.id %}">
-                {% csrf_token %}
-                <div class="form-group">
-                  <label for="recipient-name" class="col-form-label" >Nombre del Rol</label>
-                  <input type="text" class="form-control" id="recipient-name" name="nombre_rol">
-                </div>
-                <div class="form-group">
-                  <label for="recipient-name" class="col-form-label" >Descripcion de rol</label>
-                  <input type="text" class="form-control" id="recipient-name" name="descripcion">
-                </div>
-                <div class="form-group">
-                    <select class="form-select" multiple aria-label="multiple select example" name="permisos">
-                        <option selected disabled>Seleccionar los permisos</option>
-                        {% for permiso in permisos %}
-                        <option value="{{permiso.id}}">{{permiso.descripcion_permiso}}</option>
-                        {% endfor %}
-                      </select>
-                </div>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                <button type="submit" class="btn btn-primary">Guardar</button>
-              </form>
-        </div>
-      </div>
-    </div>
-  </div>
 {% if validacionPermisos.crt_rol %}
-<button class="btn btn-primary " data-toggle="modal" data-target="#exampleModal"><i class="material-icons">add</i>Agregar rol</button>
+<a class="btn btn-primary " href="{% url 'webApp:rolesProyectoCrear' proyecto.id %}"><i class="material-icons">add</i>Agregar rol</a>
 {% endif %}
-
         <div class="row">
             <div class="col-md-12">
               <div class="card">
@@ -56,7 +19,7 @@
                 </div>
                 <div class="card-body">
                   <div class="table-responsive">
-                    <table class="table">
+                    <table id="table" class="display" style="width:100%">
                       <thead class=" text-primary">
                         <th>
                           
