--- a/sistema_metodos_agiles/webApp/templates/layouts/base.html
+++ b/sistema_metodos_agiles/webApp/templates/layouts/base.html
@@ -34,9 +34,10 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
-  <link href="/static/assets/css/material-dashboard.css?v=2.1.2" rel="stylesheet" />
+  <link href="/static/assets/css/material-dashboard.css?v=2.1.2" rel="stylesheet" /> 
   <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="/static/assets/demo/demo.css" rel="stylesheet" />
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+  <!-- <link href="/static/assets/demo/demo.css" rel="stylesheet" /> -->
   <!-- Specific Page CSS goes HERE  -->
   {% block stylesheets %}{% endblock stylesheets %}
 
@@ -81,5 +82,22 @@
   
   {% endblock javascripts %}
   <script type="text/javascript" src="{% static 'index.js' %}"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+  <script>
+
+$(document).ready(function() {
+    $('#table').DataTable( {
+        "language": {
+            "lengthMenu": "Filtar _MENU_ por pagina",
+            "search":"Buscar",
+            "zeroRecords": "Nothing found - sorry",
+            "info": "Pagina _PAGE_ de _PAGES_",
+            "infoEmpty": "No records available",
+            "infoFiltered": "(filtered from _MAX_ total records)"
+        }
+    } );
+} );
+  </script>
 </body>
 </html>
