--- a/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyecto.html
+++ b/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyecto.html
@@ -72,9 +72,9 @@
                         <th>
                           Descripcion del Rol
                         </th>
-                        <!-- <th>
+                        <th>
                           Acciones
-                        </th> -->
+                        </th>
                       </thead>
                       <tbody>
                         {% for colaborador in colaboradores %}
@@ -95,14 +95,14 @@
                             {{colaborador.descripcion_rol}}
                           </td>
                           <td>
-                            <!-- <form action="% url 'webApp:editarColaboradorProyecto' proyecto.id %}" method="post">
+                            <form action="% url 'webApp:editarColaboradorProyecto' proyecto.id %}" method="post">
                               <button class="btn btn-success btn-sm" type="submit"><i class="material-icons">&#xE254;</i></button>
                             </form>
                             <form action="{% url 'webApp:eliminarColaboradorProyecto' proyecto.id %}" method="post">
                               {% csrf_token %}
-                              <input name="idRol" type="text" hidden="true" value="{{rolProyecto.id_rol}}">
+                              <input name="idColaborador" type="text" hidden="true" value="{{colaborador.id_rol}}">
                               <button class="btn btn-danger btn-sm" type="submit"><i class="material-icons">&#xE872;</i></button>
-                            </form> -->
+                            </form>
                           </td>
                         </tr>
                         {% endfor %}
