--- a/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyectoCrear.html
+++ b/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyectoCrear.html
@@ -24,7 +24,7 @@
           </select>
         </div>
         <div class="form-group">
-          <select class="form-control" aria-label="Default select example" name="rol">
+          <select class="form-control custom-select" aria-label="Default select example" name="rol" multiple="true">
             <option selected>Seleccionar rol</option>
             {% for rolProyecto in rolesProyecto %}
             <option value="{{rolProyecto.id_rol}}">{{rolProyecto.nombre_rol}}</option>
