--- a/sistema_metodos_agiles/webApp/templates/home/tipoUSCrear.html
+++ b/sistema_metodos_agiles/webApp/templates/home/tipoUSCrear.html
@@ -31,6 +31,7 @@
             {% endfor %}
           </select>
         </div>
+          <input hidden="true" type="text" name="jsonFase" id="jsonFase">
         <h4>Fases</h4>
         <!-- <div class="form-group">
           <button id="addRow">Agregar nueva fase</button> 
@@ -66,8 +67,8 @@
                   </thead>
                   <tbody>
                       <tr>
-                          <th><input type="text" id="row-1-age" name="row-1-age" value="Por Hacer"></th>
-                          <th><input type="number" id="row-1-age" name="row-1-age" value="1"></th>
+                          <th><input type="text" id="fase-0" name="fase-0" value="Por Hacer" class="fase"></th>
+                          <th><input type="number" id="orden-0" name="orden-0" value="1" class="fase"></th>
                           <th><button class="btn btn-danger btn-sm eliminar">Eliminar</button></th>
                       </tr>
                   </tbody>
@@ -91,7 +92,7 @@
     const form = $('#formTus');
  
     $('#addRow').on('click', function () {
-        t.row.add(['<input type="text" id="row-1-age" name="row-1-age">' , '<input type="number" id="row-1-age" name="row-1-age">','<button class="btn btn-danger btn-sm eliminar">Eliminar</button>']).draw(true);
+        t.row.add([`<input type="text" id="fase-${counter}" name="fase-${counter}" class="fase">` , `<input type="number" id="orden-${counter}" name="orden-${counter}" class="fase">`,'<button class="btn btn-danger btn-sm eliminar">Eliminar</button>']).draw(true);
         counter++;
     });
    // $('#addRow').click();
@@ -102,8 +103,20 @@
         .draw();
 } );
 $( "#enviar" ).click(function() {
-  console.log();
-  $( "#formTus" ).submit();
+  var data = t.$('input.fase');
+  //console.log(data);
+  let arrayFase = [];
+  for (let index = 0; index < data.length; index=index+2) {
+    arrayFase=[...arrayFase,{
+      nombre:data[index].value,
+      orden:data[index+1].value
+    }]
+  }
+  console.log(arrayFase);
+  $('#jsonFase').val(JSON.stringify(arrayFase))
+        //alert(data);
+        //return false;
+ $( "#formTus" ).submit();
 });
 });
 </script>
