--- a/sistema_metodos_agiles/webApp/templates/home/CrearProyecto.html
+++ b/sistema_metodos_agiles/webApp/templates/home/CrearProyecto.html
@@ -25,24 +25,18 @@
           </select>
         </div>
         <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Descripcion</label>
-          <input type="text" class="form-control" id="exampleInputPassword1" name="descripcion">
+          <label for="exampleInputPassword1" class="form-label">Duracion (en meses)</label>
+          <input type="number" class="form-control" id="exampleInputPassword1" name="duracion">
         </div>
-
       </div>
-
       <div class="col-6">
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Fecha Inicio</label>
-          <input type="date" class="form-control" id="exampleInpu tPassword1" name="fechaInicio">
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Fecha Fin</label>
-          <input type="date" class="form-control" id="exampleInputPassword1" name="fechaFin">
-        </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Duracion de Sprint en dias</label>
           <input type="number" class="form-control" id="exampleInputPassword1" name="sprintDias">
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Descripcion</label>
+          <input type="text" class="form-control" id="exampleInputPassword1" name="descripcion">
         </div>
       </div>
     </div>
