--- a/sistema_metodos_agiles/webApp/templates/home/index.html
+++ b/sistema_metodos_agiles/webApp/templates/home/index.html
@@ -61,7 +61,7 @@
                 <small>Sprint {{proyecto.sprint_dias}} dias</small>
               </h3>
               <h3 class="card-title">
-                <small>Rol {{proyecto.nombre_rol}}</small>
+                <small>Rol {{proyecto.roles}}</small>
               </h3>
             </div>
             <div class="card-footer">
