--- a/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyectoEditar.html
+++ b/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyectoEditar.html
@@ -15,12 +15,12 @@
     <div class="card-body">
       <form method="post" action="{% url 'webApp:editarColaboradorProyecto' proyecto.id %}">
         {% csrf_token %}
-        <div class="form-group">
-          <input type="number" class="form-control" id="recipient-name" hidden="true" name="idRol" value="{{colaboradores.id}}">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" id="recipient-name" name="colROL" value="{{colaboradores.rol}}">
-        </div>
+        <select class="form-select" multiple aria-label="multiple select example" name="permisos" value="{{rolesProyecto.nombre_rol}}">
+          <option selected disabled>Seleccionar los permisos</option>
+          {% for permiso in rolesProyecto %}
+          <option value="{{permiso.id}}">{{permiso.nombre_rol}}</option>
+          {% endfor %}
+        </select>
         <a class="btn btn-danger btn-sm" href="{% url 'webApp:colaboradoresProyecto' proyecto.id %}">Cancelar</a>
         <button type="submit" class="btn btn-primary btn-sm">Guardar</button>
       </form>
