--- a/sistema_metodos_agiles/webApp/templates/includes/navigation.html
+++ b/sistema_metodos_agiles/webApp/templates/includes/navigation.html
@@ -7,6 +7,7 @@
           {% if request.user.is_authenticated %}
 
             <ul class="navbar-nav">
+              <li>{{user.email}}</li>
 
               <li class="nav-item dropdown">
                 <a class="nav-link" href="#pablo" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
