--- a/sistema_metodos_agiles/webApp/templates/home/sprintTablero.html
+++ b/sistema_metodos_agiles/webApp/templates/home/sprintTablero.html
@@ -17,6 +17,7 @@
         {% csrf_token %}
         <div class="row">
           <div class="col-8">
+            <label for="tipoUs">Tipo de User Story</label>
             <select id="tipoUs" class="form-control" aria-label="Default select example" name="tipoUsId">
               {% for tpus in tipoUs %}
               <option value="{{tpus.id}}" {% if tpus.id == tipoUsTablero.id %} selected {% endif %}>{{tpus.nombre_tipo_us}}</option>
@@ -41,14 +42,15 @@
                   <!-- <div class="dropzone" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="clearDrop(event)"> &nbsp; </div> -->
                   {% for userStory in userStorys %}
                   {% if fase.id == userStory.us.fase.id %}
-                  <div class="card shadow-sm" id="{{userStory.us.id}}" draggable="true" ondragstart="drag(event)">
+                  <div class="card shadow-sm" id="{{userStory.us.id}}" {% if userSession.id == userStory.colaborador.id %} draggable="true" ondragstart="drag(event)" {% endif %}>
                     <div class="card-body p-2">
                       <div class="card-title">
-                        <img src="//via.placeholder.com/30" class="rounded-circle float-right">
+                        <img src="//via.placeholder.com/30" class="rounded-circle float-right" alt="Colaborador">
                         <a href="" class="lead ">{{userStory.us.nombre_us}}</a>
                       </div>
                       <p>
                         {{userStory.us.descripcion_us}}
+                        {{userStory.colaborador.id}}
                       </p>
                       <button class="btn btn-primary btn-sm">Ver</button>
                     </div>
@@ -73,7 +75,7 @@
         <input hidden="true" type="number" name="tipoUsId" value="{{tipoUsTablero.id}}">
       </form>
 
-      <a class="btn btn-danger btn-sm" href="{% url 'webApp:tipoUs' proyecto.id %}">Cancelar</a>
+<a class="btn btn-danger btn-sm" href="{% url 'webApp:sprintProyecto' proyecto.id %}">Volver</a>
 
     </div>
   </div>
